初めてのコミット　カクト君かっこいい

--- a/practice.html
+++ b/practice.html
@@ -9,7 +9,7 @@
     <h2>gitの使い方の練習</h2>
     <p>下記内容を編集してください</p>
     <h3>変更内容１</h3>
-    <p></p>
+    <p>カクト君かっこいい！！</p>
     <h3>変更内容２</h3>
     <p></p>
 </body>
